# options_analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
options_freedom/: VERSION  utils.py
options_freedom/conditions/: base.py
options_freedom/conditions/close/: max_loss_take_profit.py
options_freedom/conditions/open/: vix_range.py
options_freedom/data/quotes/vix/: .2005_2021.csv.swp
options_freedom/models/: constants.py  trade.py
options_freedom/option/: base.py  option.py  spy.py
options_freedom/pattern/: base.py  bull_put_spread.py  iron_condor.py
options_freedom/simulator/: base.py  time_flow.py
options_freedom/strategy/: base.py  spy_bull_put_45_days.py
options_freedom/symbol/: base.py  vix.py
simulations/: bull_put_spread.py  iron_condor.py  test.py
simulations/results/: Simulation_Analizer.ipynb
simulations/results/data/: BullPutSpread_30_15_45  BullPutSpread_30_15_45_15  BullPutSpread_30_15_45_15_ligth  BullPutSpread_30_15_45_ligth  RR
simulations/results/data/bull_put_spread/: BullPutSpread_30_15_45_15_100_25  BullPutSpread_30_15_45_15_100_25_ligth  BullPutSpread_30_15_45_15_100_50  BullPutSpread_30_15_45_15_100_50_ligth  BullPutSpread_30_15_45_15_100_75  BullPutSpread_30_15_45_15_100_75_ligth  BullPutSpread_30_15_45_15_200_25  BullPutSpread_30_15_45_15_200_25_ligth  (+22 more)
tests/conditions/: test_max_loss_take_profit.py  test_vix_range.py
tests/options/: test_spy.py
tests/pattern/: test_bull_put_spread.py
tests/simulations/: bull_put_spread.py
tests/simulator/: test_time_flow.py
tests/symbols/: test_vix.py
(+85 files in other folders)
