[tool.poetry]
name = "options_freedom"
version = "0.1.0"
description = "Tool to evaluate option investment strategies."
authors = ["Vicente Paul Guerrero Lule"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
